--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <i class="fa-brands fa-github"></i>
             </a>
             <a
-              href="./assets/David-Bragg-Resume.pdf"
+              href="#"
               target="_blank"
               class="social__link click"
             >
@@ -258,14 +258,14 @@
           </figure>
           <div class="footer__social--list">
             <a
-              href="#"
+              href="https://github.com/qieqss"
               target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Github</a
             >
             <a
-              href="#"
+              href="https://www.linkedin.com/in/alexey-kulakov-020031242/"
               target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
@@ -273,8 +273,8 @@
             >
             <a
               href="#"
-              target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
+              onclick="toggleModal()"
             >
               Email</a
             >
