--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/bcf4e3b081.js"
       crossorigin="anonymous"
@@ -89,11 +89,7 @@
             >
               <i class="fa-brands fa-github"></i>
             </a>
-            <a
-              href="#"
-              target="_blank"
-              class="social__link click"
-            >
+            <a href="#" target="_blank" class="social__link click">
               <i class="fa-solid fa-file-lines"></i>
             </a>
           </div>
@@ -253,9 +249,15 @@
     <footer>
       <div class="container">
         <div class="row footer__row">
-          <figure>
-            <img class="footer__logo--img" src="./assets/logo.svg" alt="" />
-          </figure>
+          <a href="" class="footer__anchor">
+            <figure class="footer__logo">
+              <img class="footer__logo--img" src="./assets/logo.svg" alt="" />
+            </figure>
+            <span class="footer__logo--popper">
+              Top
+              <i class="fa-solid fa-arrow-up"></i>
+            </span>
+          </a>
           <div class="footer__social--list">
             <a
               href="https://github.com/qieqss"
