--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hire a professional Frontend Software Engineer today!">
+    <meta name="author" content="Alexey Kulakov">
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <script
