--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Hire a professional Frontend Software Engineer today!">
     <meta name="author" content="Alexey Kulakov">
+    <meta name="keywords" content="HTML, CSS, JS, JavaScript, Frontend, Software, Engineer, Hire, Professional">
+    <meta property="og:image" content="./assets/logo.svg">
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <script
