--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Hire a professional Frontend Software Engineer today!">
-    <meta name="author" content="Alexey Kulakov">
-    <meta name="keywords" content="HTML, CSS, JS, JavaScript, Frontend, Software, Engineer, Hire, Professional">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="./assets/logo.svg">
+    <meta property="og:title" content="AK | Frontend Developer | Freelancer"> 
+    <meta name="author" content="Alexey Kulakov">
+    <meta name="description" content="Hire a professional Frontend Software Engineer today!">
+    <meta name="keywords" content="HTML, CSS, JS, JavaScript, Frontend, Software, Engineer, Hire, Professional">
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <script
