--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="./assets/logo.svg">
-    <meta property="og:title" content="AK | Frontend Developer | Freelancer"> 
-    <meta name="author" content="Alexey Kulakov">
-    <meta name="description" content="Hire a professional Frontend Software Engineer today!">
-    <meta name="keywords" content="HTML, CSS, JS, JavaScript, Frontend, Software, Engineer, Hire, Professional">
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./assets/logo.svg" />
+    <meta property="og:title" content="AK | Frontend Developer | Freelancer" />
+    <meta name="author" content="Alexey Kulakov" />
+    <meta
+      name="description"
+      content="Hire a professional Frontend Software Engineer today!"
+    />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JS, JavaScript, Frontend, Software, Engineer, Hire, Professional"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/bcf4e3b081.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
@@ -29,8 +35,8 @@
     <script src="app.js"></script>
     <title>Alexey Kulakov</title>
   </head>
-  <body>
-    <section id="landing-page" onmousemove="moveBackground(event)">
+  <body onmousemove="moveBackground(event)">
+    <section id="landing-page">
       <nav>
         <figure>
           <a href="#">
@@ -41,28 +47,22 @@
           <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >About</a
-            >
+              class="nav__link--anchor link__hover-effect link__hover-effect--black">About</a>
           </li>
           <li class="nav__link">
             <a
               href="#projects"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Projects</a
-            >
+              class="nav__link--anchor link__hover-effect link__hover-effect">Projects</a>
           </li>
           <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Contact</a
-            >
+              class="nav__link--anchor link__hover-effect link__hover-effect--black">Contact</a>
           </li>
           <li class="nav__link click" onclick="toggleContrast()">
-            <a href="#" class="nav__link--anchor"
-              ><i class="fa-solid fa-circle-half-stroke"></i
-            ></a>
+            <a href="#" class="nav__link--anchor">
+              <i class="fa-solid fa-circle-half-stroke"></i>
+            </a>
           </li>
         </ul>
       </nav>
