--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/bcf4e3b081.js"
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
@@ -47,17 +47,23 @@
           <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black">About</a>
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >About</a
+            >
           </li>
           <li class="nav__link">
             <a
               href="#projects"
-              class="nav__link--anchor link__hover-effect link__hover-effect">Projects</a>
+              class="nav__link--anchor link__hover-effect link__hover-effect"
+              >Projects</a
+            >
           </li>
           <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black">Contact</a>
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Contact</a
+            >
           </li>
           <li class="nav__link click" onclick="toggleContrast()">
             <a href="#" class="nav__link--anchor">
@@ -137,7 +143,7 @@
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
                 alt=""
               />
-              <span class="technology__name">HTML</span>
+              <span class="technology__name">HTML5</span>
             </figure>
             <figure class="modal__technology">
               <img
@@ -145,7 +151,7 @@
                 src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
                 alt=""
               />
-              <span class="technology__name">CSS</span>
+              <span class="technology__name">CSS3</span>
             </figure>
             <figure class="modal__technology">
               <img
@@ -161,7 +167,7 @@
                 src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
                 alt=""
               />
-              <span class="technology__name">React</span>
+              <span class="technology__name">React.js</span>
             </figure>
           </div>
         </div>
@@ -219,30 +225,26 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/blinker-mockup.png"
+                  src="./assets/e-commerce.png"
                   class="project__img"
                   alt=""
                 />
                 <div class="project__wrapper--bg"></div>
                 <div class="project__description">
-                  <h3 class="project__description--title">
-                    Car Sales Projects
-                  </h3>
+                  <h3 class="project__description--title">E-Commerce App</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Vue, Vuex
+                    HTML5 | CSS3 | JavaScript | React.js
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    diam leo, scelerisque sed odio eget, luctus faucibus augue.
-                    Fusce volutpat laculis dapibus. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Maecenas id eleifend libero. In
-                    hac habitasse platea dictumst.
+                    Using HTML5, CSS3, JavaScript and React.js (+Hooks) best
+                    practices, I built a fake user-friendly E-Library with a
+                    clean UI and UX design and an easy-to-undestand layout.
                   </p>
                   <div class="project__description--links">
-                    <a href="#" class="project__description--link">
+                    <a href="https://github.com/qieqss/e-commerce-react" class="project__description--link">
                       <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="#" class="project__description--link">
+                    <a href="http://e-cmrc-react.herokuapp.com/" class="project__description--link">
                       <i class="fa-solid fa-link"></i>
                     </a>
                   </div>
