--- a/index.html
+++ b/index.html
@@ -241,10 +241,51 @@
                     clean UI and UX design and an easy-to-undestand layout.
                   </p>
                   <div class="project__description--links">
-                    <a href="https://github.com/qieqss/e-commerce-react" class="project__description--link">
+                    <a
+                      href="https://github.com/qieqss/e-commerce-react"
+                      class="project__description--link"
+                    >
                       <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="http://e-cmrc-react.herokuapp.com/" class="project__description--link">
+                    <a
+                      href="http://e-cmrc-react.herokuapp.com/"
+                      class="project__description--link"
+                    >
+                      <i class="fa-solid fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/movies-app.png"
+                  class="project__img"
+                  alt=""
+                />
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Movies App</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML5 | CSS3 | JavaScript
+                  </h4>
+                  <p class="project__description--para">
+                    Using top tech best practices I built a simple website
+                    that makes a request to the TMDB API in order to search and display
+                    movies. Also has the ability to search right from the homepage.
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/qieqss/movie-rush"
+                      class="project__description--link"
+                    >
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a
+                      href="https://qieqss.github.io/movie-rush/"
+                      class="project__description--link"
+                    >
                       <i class="fa-solid fa-link"></i>
                     </a>
                   </div>
