added dark theme by default + header entry animation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="app.js"></script>
     <title>Alexey Kulakov</title>
   </head>
-  <body onmousemove="moveBackground(event)">
+  <body class="dark-theme" onmousemove="moveBackground(event)">
     <section id="landing-page">
       <nav>
         <figure>
@@ -54,7 +54,7 @@
           <li class="nav__link">
             <a
               href="#projects"
-              class="nav__link--anchor link__hover-effect link__hover-effect"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
