removed purple color from title dot

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <header class="header">
         <div class="header__content">
           <h1 class="title">Hey</h1>
-          <h1 class="title rebecca-purple">I'm Alexey.</h1>
+          <h1 class="title"><span class="rebecca-purple">I'm Alexey</span>.</h1>
           <p class="header__para">
             I'm a
             <strong class="rebecca-purple">Frontend Software Enginner</strong>
