added linking to a new page in the project section links

--- a/index.html
+++ b/index.html
@@ -244,12 +244,14 @@
                     <a
                       href="https://github.com/qieqss/e-commerce-react"
                       class="project__description--link"
+                      target="_blank"
                     >
                       <i class="fa-brands fa-github"></i>
                     </a>
                     <a
                       href="http://e-cmrc-react.herokuapp.com/"
                       class="project__description--link"
+                      target="_blank"
                     >
                       <i class="fa-solid fa-link"></i>
                     </a>
@@ -271,20 +273,23 @@
                     HTML5 | CSS3 | JavaScript
                   </h4>
                   <p class="project__description--para">
-                    Using top tech best practices I built a simple website
-                    that makes a request to the TMDB API in order to search and display
-                    movies. Also has the ability to search right from the homepage.
+                    Using top tech best practices I built a simple website that
+                    makes a request to the TMDB API in order to search and
+                    display movies. Also has the ability to search right from
+                    the homepage.
                   </p>
                   <div class="project__description--links">
                     <a
                       href="https://github.com/qieqss/movie-rush"
                       class="project__description--link"
+                      target="_blank"
                     >
                       <i class="fa-brands fa-github"></i>
                     </a>
                     <a
                       href="https://qieqss.github.io/movie-rush/"
                       class="project__description--link"
+                      target="_blank"
                     >
                       <i class="fa-solid fa-link"></i>
                     </a>
