added footer image taking you to the top of the page

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <footer>
       <div class="container">
         <div class="row footer__row">
-          <a href="" class="footer__anchor">
+          <a href="#" class="footer__anchor">
             <figure class="footer__logo">
               <img class="footer__logo--img" src="./assets/logo.svg" alt="" />
             </figure>
