--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                   <p class="project__description--para">
                     Using HTML5, CSS3, JavaScript and React.js (+Hooks) best
                     practices, I built a fake user-friendly E-Library with a
-                    clean UI and UX design and an easy-to-undestand layout.
+                    clean UI/UX design and an easy-to-undestand layout.
                   </p>
                   <div class="project__description--links">
                     <a
